--- a/WebContent/page/layout/TopNavigationBottomContents.xml
+++ b/WebContent/page/layout/TopNavigationBottomContents.xml
@@ -13,11 +13,43 @@
         <w2:layoutInfo/>
         <w2:publicInfo method=""/>
         <script lazy="false" type="text/javascript"><![CDATA[
-scwin.onpageload = function() {
-	wfmLayoutTop.setSrc("/page/component/TopNavigation.xml");
+scwin.onpageload = function () {
+    wfmLayoutTop.setSrc("/page/component/TopNavigation.xml");
     wfmLayoutContents.setSrc("/page/subpage/HomeDashboard.xml");
 };
-]]></script>
+
+var savedParam = ""
+scwin.saveParam = function (param) {
+    savedParam = param
+};
+
+scwin.moveSystemSearch = function () {
+
+    if (savedParam == "") {
+        return;
+    }
+
+    setTimeout(function () {
+
+        var rowJSON = {
+            "name": savedParam
+        };
+
+        // 새로 열릴 화면에 데이터를 전달 (dataObject를 통해 전달 가능)
+        var obj = {
+            "dataObject": {
+                "type": "json",
+                "name": "HomeSearch",
+                "data": rowJSON
+            }
+        };
+
+        wfmLayoutContents.setSrc("/page/subpage/SystemSearch.xml", obj);
+
+        savedParam = "";
+
+    }, 300);
+};]]></script>
     </head>
     <body ev:onpageload="scwin.onpageload">
     	<xf:group style="width:100%;height:68px;" id="">
