--- a/WebContent/cm/css/product.css
+++ b/WebContent/cm/css/product.css
@@ -1277,6 +1277,7 @@ div[id*=processbar2_i] iframe {height:220px !important}
 /* eams side */
 .eams_sidebox {display:flex;flex-direction:column;height:100%;background:#EFF0F4}
 .eams_side_search {position:relative;padding:16px}
+.eams_side_search .w2searchbox {width:100%}
 .eams_side_search .w2input {width:100%;height:40px;padding:0 35px 0 16px;border-radius:20px}
 .eams_side_search .btn_side_search {position:absolute;top:21px;right:22px;width:30px;height:30px;border:0;background:url(../images/base/ico_search.svg) no-repeat center}
 
